--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,10 @@
     "@types/styled-components": "^5.1.4",
     "purify-ts": "^0.16.1",
     "react": "^17.0.1",
+    "react-cookie": "^4.0.3",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "reactjs-popup": "^2.0.4",
     "styled-components": "^5.2.1",
     "typescript": "^4.1.2",
     "web-vitals": "^0.2.4"
@@ -42,5 +44,7 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {},
+  "proxy": "http://localhost:8080"
 }
