--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react": "^17.0.1",
     "react-cookie": "^4.0.3",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "reactjs-popup": "^2.0.4",
     "styled-components": "^5.2.1",
@@ -45,6 +46,8 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/react-router-dom": "^5.1.6"
+  },
   "proxy": "http://localhost:8080"
 }
